                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 10-12-2005 fixed: IMDB "Movie Lookup" on folders
 - 09-12-2005 fixed: rarmanager errors preventing cvs from compiling (just commented out the offending lines)
 - 09-12-2005 fixed: ReplayGain wasn't correctly using the settings in the GUI.
 - 09-12-2005 fixed: My music incorrect playlist item selected when rar or zip files were in the folder.
 - 09-12-2005 fixed: Infinite loop in DeleteBookmark() if the bookmark had an invalid path.
 - 09-12-2005 fixed: Spin control in settings followed weird focusing patterns when moving to it from the left or right.
 - 08-12-2005 added: SystemInfo: Total System Uptime, will show how long XBMC was used since first start! [GeminiServer]
 - 08-12-2005 added: SmartXX V3 Modchip Detection [GeminiServer]
 - 08-12-2005 fixed: previos changed settings was not saved if a restart follow to network Assignment change [GeminiServer]
 - 07-12-2005 fixed: rar directory masking.
 - 07-12-2005 fixed: IMDB thumbs for movies in the root of a multipath bookmark in My Videos (i hope?)
 - 06-12-2005 fixed: My Music Library access to Playlists and Top 100 Songs
 - 06-12-2005 changed: error messages related to nfo file reading for imdb url's
 - 06-12-2005 added: force index rebuilding to video osd.
 - 06-12-2005 fixed: [ 1372341 ] Using 'none' in PM3 freezes xbox after apx. half hour in non-English locales. Requires changing the vis off none, then back onto it to stop the freezing.
 - 06-12-2005 fixed: [ 1324302 ] XBMC hangs when skipping to next video in My Videos playlist.
 - 06-12-2005 fixed: Bug in GUIFont::GetTextExtent() which could cause filenames with characters that were not present in the font to crash.